samples/_failures_safe/1761316235_65d027_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1262ca53.c: In function ‘main’:
./samples/SAFE/__tmp_1262ca53.c:152:5: error: expected ‘,’ or ‘;’ at end of input
  152 |     int cols1 = read_int
      |     ^~~
./samples/SAFE/__tmp_1262ca53.c:152:5: error: expected declaration or statement at end of input
